--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1666,3 +1666,47 @@ footer {
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
 }
+
+
+
+
+
+/*$background-color: #EAEDF2;
+$button-color: #5AEED1;
+$button-text-color: #fff;
+$search-height: 100px;
+// $search-width: 500px;
+$search-font-size: 40px;
+
+// SEARCH BAR
+.search {
+  box-shadow: 0 20px 10px -10px rgba(200, 200, 200, .5);
+  display: inline-block;
+}
+
+.search__input {
+  border: 0;
+  outline: 0;
+  line-height: $search-height;
+  font-size: $search-font-size;
+  padding: 0 ($search-height - $search-font-size)/2;
+  float: left;
+}
+
+.search__button {
+  box-shadow: -10px 0 10px -5px rgba($button-color, .5);
+  color: $button-text-color;
+  background-color: $button-color;
+  width: $search-height;
+  line-height: $search-height;
+  text-align: center;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
+  outline: 0;
+  transition: box-shadow .3s ease-out;
+
+  &:active {
+    box-shadow: -10px 0 10px -10px rgba($button-color, .5);
+  }
+}*/
